--- a/Site/src/css/cadastroVaga.css
+++ b/Site/src/css/cadastroVaga.css
@@ -136,6 +136,35 @@ body
     width: 45%;
 }
 
+.divButtonsTag-cv
+{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.buttonTag-vg
+{
+    border: none;
+    font-family: var(--bold);
+    color: var(--white);
+    background-color: #696666;
+    /* border-radius: 40px 0 40px 0; */
+    width: 100px;
+    height: 25px;
+    /* filter: drop-shadow(15px 15px 4px rgba(0, 0, 0, 0.25)); */
+    font-size: var(--smallText);
+    cursor: pointer;
+    margin-top: 5px;
+}
+
+#tags-vg
+{
+    margin: 15px 0;
+    min-height: 150px;
+    background-color: var(--lightGrey);
+}
+
 /* Responsive */
 @media screen and (max-width: 835px)
 {
