--- a/Site/src/css/cadastroVaga.css
+++ b/Site/src/css/cadastroVaga.css
@@ -161,8 +161,13 @@ body
 #tags-vg
 {
     margin: 15px 0;
+    padding: 20px 0 0 6%;
     min-height: 150px;
-    background-color: var(--lightGrey);
+    background-color: var(--mediumGrey);
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    border: 1px groove white;
 }
 
 /* Responsive */
