--- a/Site/src/css/feedVagas.css
+++ b/Site/src/css/feedVagas.css
@@ -77,6 +77,7 @@ body {
     padding-right: 5%;
     display: flex;
     align-items: flex-start;
+    overflow-y: auto;
 }
 
 .divSideBarContainer {
