--- a/Site/src/css/cadastroVaga.css
+++ b/Site/src/css/cadastroVaga.css
@@ -123,6 +123,21 @@ body
     margin-top: 30px;
 }
 
+.grayButton-vg
+{
+    border: none;
+    font-family: var(--bold);
+    color: var(--white);
+    background-color: #696666;
+    border-radius: 40px 0 40px 0;
+    width: 200px;
+    height: 50px;
+    filter: drop-shadow(15px 15px 4px rgba(0, 0, 0, 0.25));
+    font-size: var(--subtitle);
+    cursor: pointer;
+    margin-top: 30px;
+}
+
 #text-vg
 {
     float: right;
