changing every red tag to pink

--- a/Site/public/css/feedVagasVaga.css
+++ b/Site/public/css/feedVagasVaga.css
@@ -19,7 +19,7 @@
     --blueTag: #69E3E8;
     --purpleTag: #4c2dfa;
     --yellowTag: #FFC700;
-    --redTag: #E86969;
+    --redTag: #fa2abf;
 
     /* Margin */
     --xxsMargin: 16px;
