--- a/Site/public/css/styles.css
+++ b/Site/public/css/styles.css
@@ -84,7 +84,7 @@
   --blueTag: #69E3E8;
   --purpleTag: #7B69E8;
   --yellowTag: #FFC700;
-  --redTag: #E86969;
+  --redTag: #fa2abf;
 
   /* Margin */
   --xxsMargin: 1%;
