--- a/Site/src/css/feedVagas.css
+++ b/Site/src/css/feedVagas.css
@@ -26,7 +26,7 @@ body {
     --blueTag: #69E3E8;
     --purpleTag: #4c2dfa;
     --yellowTag: #FFC700;
-    --redTag: #E86969;
+    --redTag: #fa2abf;
 
     /* Margin */
     --xxsMargin: 16px;
